Fixing white flash when loading WebView in dark mode. Also adding ability to template the html/css files, and provide replacement strings at runtime.

--- a/phoenix-ios/phoenix-ios/views/html/about.css
+++ b/phoenix-ios/phoenix-ios/views/html/about.css
@@ -4,8 +4,9 @@
 **/
 
 :root {
-  color-scheme: light dark;
-  --link-color: blue;
+  background: [[background_color]];
+  color: [[foreground_color]];
+  --link-color: [[link_color]];
 }
 
 body {
@@ -30,10 +31,4 @@ p.noBottomPadding {
 ul {
 	margin-top: 0;
 	padding-top: 0;
-}
-
-@media screen and (prefers-color-scheme: dark) {
-  :root {
-	--link-color: #93d5ff;
-  }
 }
